Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,29 +4,40 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Ateliers CLI by Labx</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/Labx/cli-labx">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/Labx/cli-labx/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/Labx/cli-labx/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1>Ateliers CLI</h1>
-        <p>Utiliser la ligne de commande</p>
-        <p class="view"><a href="https://github.com/Labx/cli-labx">View the Project on GitHub <small>Labx/cli-labx</small></a></p>
-        <ul>
-          <li><a href="https://github.com/Labx/cli-labx/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Labx/cli-labx/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Labx/cli-labx">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
+
       <section>
+        <div id="title">
+          <h1>Ateliers CLI</h1>
+          <p>Utiliser la ligne de commande</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/Labx">Labx</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
         <h1>
 <a name="cli-labx" class="anchor" href="#cli-labx"><span class="octicon octicon-link"></span></a>cli-labx</h1>
 
@@ -52,11 +63,8 @@
 <li>Inscription à la liste : <a href="http://labx.fr/mailman/listinfo/ateliers_cli">http://labx.fr/mailman/listinfo/ateliers_cli</a>.</li>
 </ul><p>╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍</p>
       </section>
+
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/Labx">Labx</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
