refactor(tarif): conseil l'adhésion au labx

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <strong>19h→21h30</strong> (avancés).</li>
 </ul>
 </li>
-<li> Tarif : libre ;</li>
+<li> Tarif : adhésion au L@bX (~5€/mois) conseillée ;</li>
 <li>Liste de diffusion : <a href="mailto:ateliers_cli@labx.fr">ateliers_cli@labx.fr</a> ;</li>
 <li>Inscription à la liste : <a href="http://labx.fr/mailman/listinfo/ateliers_cli">http://labx.fr/mailman/listinfo/ateliers_cli</a>.</li>
 </ul><p>╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍</p>
