Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <h1>
-<a name="cli-labx" class="anchor" href="#cli-labx"><span class="octicon octicon-link"></span></a>cli-labx</h1>
+<a id="cli-labx" class="anchor" href="#cli-labx" aria-hidden="true"><span class="octicon octicon-link"></span></a>cli-labx</h1>
 
 <p>Documents et projets des <a href="https://www.labx.fr/">ateliers CLI organisés au LabX</a> (<em>hackerspace</em> de Bordeaux).</p>
 
@@ -49,19 +49,19 @@
 
 <ul>
 <li>Lieu : <a href="http://osm.org/go/b%7E%7EHz1Mx-?layers=H&amp;m=&amp;node=2575631402">L@bX, 2, rue Marc Sangnier, Bègles</a> ;</li>
-<li>Horaires: tous <strong>les lundis</strong>
+<li>Horaires: 
 
 <ul>
-<li>
-<strong>19h→20h</strong> (débutants),</li>
-<li>
-<strong>19h→21h30</strong> (avancés).</li>
+<li>débutant: <strong>mercredi (19h→20h)</strong>,</li>
+<li>avancés: chaque <strong>mardi (20h→22h)</strong>.</li>
 </ul>
 </li>
-<li> Tarif: <a href='https://wiki.labx.fr/doku.php?id=ri_l_bx'>adhésion au L@bX (~5€/mois)</a> conseillée ;</li>
+<li> Tarif : libre ;</li>
 <li>Liste de diffusion : <a href="mailto:ateliers_cli@labx.fr">ateliers_cli@labx.fr</a> ;</li>
 <li>Inscription à la liste : <a href="http://labx.fr/mailman/listinfo/ateliers_cli">http://labx.fr/mailman/listinfo/ateliers_cli</a>.</li>
-</ul><p>╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍</p>
+</ul>
+
+<p>╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍ ╍</p>
       </section>
 
     </div>
